--- a/index.html
+++ b/index.html
@@ -13,29 +13,37 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="about-us">
+    <section class="section-adv">
       <div class="container">
-        <div class="wrapp-text">
-          <h2 class="title">
-            YachtJet fleet is here to take you on the ultimate adventure
-          </h2>
-          <div class="wrapp-subtitle">
-            <p class="subtitle">
-              From spacious decks to state-of-the-art technology, our yachts are
-              designed to provide the perfect blend of luxury and functionality.
-            </p>
+        <ol class="adv-list">
+          <li class="adv-item">
+            <h3 class="num">01</h3>
             <p class="text">
-              Take a look at our selection below and choose the yacht that
-              matches your needs and preferences.No matter which yacht you
-              choose, our experienced crew will ensure that your journey is
-              smooth and enjoyable. Book now and get ready for an unforgettable
-              adventure on the high seas.
+              Swimming and water sports: try your hand at water skiing
             </p>
-          </div>
-        </div>
+          </li>
+          <li class="adv-item">
+            <h3 class="num">02</h3>
+            <p class="text">Fishing: try to catch your own dinner</p>
+          </li>
+          <li class="adv-item">
+            <h3 class="num">03</h3>
+            <p class="text">
+              Sightseeing tours: take a shore or island tour, enjoy the views
+              and sunsets from the water
+            </p>
+          </li>
+          <li class="adv-item">
+            <h3 class="num">04</h3>
+            <p class="text">
+              Rest and relaxation: read a book or listen to music while enjoying
+              the outdoor atmosphere.
+            </p>
+          </li>
+        </ol>
+
         <div class="wrapp-img">
-          <div class="test"></div>
-          <img src="./img/Photo.png" alt="" class="img-about-us" />
+          <img src="./img/img-yach.jpg" alt="" class="img-yach" />
         </div>
       </div>
     </section>
